fix profile spacing

--- a/css/style.css
+++ b/css/style.css
@@ -350,7 +350,7 @@ table {
 }
 /* ==========================================================================Section Styles========================================================================== */
 .section-padding {
-	padding:50px 0 100px
+	padding:180px 0 100px
 }
 .dark-bg {
 	background:#f3f5f8;
